[package]
name = "cpp_syn"
version = "0.12.0" # don't forget to update version in readme for breaking changes
authors = ["Michael Layzell <michael@thelayzells.com>", "David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Internal rust-cpp nom parser for Rust source code"
repository = "https://github.com/mystor/cpp_syn"
documentation = "https://docs.rs/cpp_syn"
include = ["Cargo.toml", "src/**/*.rs"]

[features]
default = ["parsing", "printing"]
aster = []
full = []
parsing = ["unicode-xid", "cpp_synom"]
printing = ["quote"]
visit = []
fold = []

[dependencies]
clippy = { version = "0.*", optional = true }
quote = { version = "0.3", optional = true }
unicode-xid = { version = "0.0.4", optional = true }
cpp_synom = { version = "0.12.0", path = "synom", optional = true }

[dev-dependencies]
syntex_pos = "0.52"
syntex_syntax = "0.52"
tempdir = "0.3.5"
time = "0.1.35"
walkdir = "1.0.1"
